--- a/skrape-js/package.json
+++ b/skrape-js/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "bun-types": "^1.2.1",
     "typescript": "^5.0.0",
     "zod": "^3.0.0"
   }
