--- a/skrape-js/package.json
+++ b/skrape-js/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^20.0.0",
     "bun-types": "^1.2.1",
     "typescript": "^5.0.0",
-    "zod": "^3.0.0"
+    "zod": "^3.0.0",
+    "dotenv": "^16.0.3"
   }
 }
